Fix(MessageBox): Align message box

--- a/src/client/src/components/message-box/MessageBox.css
+++ b/src/client/src/components/message-box/MessageBox.css
@@ -42,7 +42,7 @@
   .message-box-wrapper {
     position: fixed;
     font-size: 1.1em;
-    top: 17vw;
+    top: 22vw;
     left: 38vw;
     width: min-content;
     white-space: normal;
